--- a/exercicios/ex022projetosite/fundo007.html
+++ b/exercicios/ex022projetosite/fundo007.html
@@ -10,7 +10,7 @@
             background-image: url('imagens/target001.png');/*coloca imagem defundo*/
             background-size: 100% 100%; /*a iamgem vai ocupar 100% do body*/
             position: relative; /*centralizar conteudo*/
-            height: 96vh;/* a iamgem vai ocpar 96% do viewport*/
+            height: 96vh;/* a iamgem vai ocupar 96% do viewport*/
             background-color: brown;
             padding: 50px;
         }
@@ -23,7 +23,7 @@
             background-color: yellow;
             top: 50%;/*centralizar conteudo do top pra baixo*/
             left: 50%;/*centralizraconteudo da esquerda pro meio*/
-            transform: translate(-50% , -50%);/*move o conteudo pra tras e pre cima(-),*/
+            transform: translate(-50%, -50%);/*move o conteudo pra tras e pre cima(-),*/
         }
     </style>
 </head>
