--- a/exercicios/ex024iframes/iframe001.html
+++ b/exercicios/ex024iframes/iframe001.html
@@ -7,10 +7,15 @@
     <title>Estudos de iframe</title>
 
     <style>
+        body{
+            background-color: darkgrey;
+        }
         iframe{
             width: 400px;
             height: 400px;
             border: 2px solid orange;
+            margin: 20px;
+            padding: 10px;
         }
     </style>
 </head>
