--- a/exercicios/ex024iframes/paginas-extras/pagina001.html
+++ b/exercicios/ex024iframes/paginas-extras/pagina001.html
@@ -7,7 +7,9 @@
     <title>Site de Teste</title>
 
     <style>
-        body{font-family: Arial, Helvetica, sans-serif;}
+        
+        body{font-family: Arial, Helvetica, sans-serif;
+        background-color: rgb(245, 236, 236);}
 
         table{
             border-collapse: collapse;
@@ -23,7 +25,7 @@
             font-family:  'Times New Roman', Times, serif;
         }
         tr:nth-child(even){
-            background-color: antiquewhite;/* deixa a tabela zebrado*/
+            background-color: rgb(221, 149, 54);/* deixa a tabela zebrado*/
         }
         div#conteiner{
             overflow-x: auto;/*cria uma barra de rolagem na tabela*/
