--- a/exercicios/ex025form/form003.html
+++ b/exercicios/ex025form/form003.html
@@ -8,6 +8,12 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
+            color: brown;
+        }
+        input{
+            border: 2px solid rgb(5, 116, 14);
+            border-radius: 5px;
+            color: brown;
         }
     </style>
 </head>
