--- a/exercicios/ex026mq/mq001/index.html
+++ b/exercicios/ex026mq/mq001/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-<!--chamadas Medias Queries-->
-    <link rel="stylesheet" href="estilos/tela.css" media="screen">
+<!--chamadas Medias Queries = Medias Type + Media Featurers(recursos de mídia) -->
+
+    <link rel="stylesheet" href="estilos/tela.css" media="screen"><!--telas de todos os tamanhos
+    -->
     <link rel="stylesheet" href="estilos/impressora.css" media="print">
 </head>
 <body>
