--- a/exercicios/ex026mq/mq005/index.html
+++ b/exercicios/ex026mq/mq005/index.html
@@ -8,8 +8,9 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/Media-Query.css">
 </head>
-<body>
+<body  onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
@@ -35,19 +36,28 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dolor at quis esse dicta fugit sunt consectetur iure cumque? Quos aspernatur tempora inventore obcaecati nostrum. Minus perferendis quaerat atque dolorum adipisci inventore blanditiis quisquam, ratione itaque a? Ea laborum ipsam accusamus amet vitae expedita quibusdam porro. Officiis asperiores sapiente ab.</p>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dolor at quis esse dicta fugit sunt consectetur iure cumque? Quos aspernatur tempora inventore obcaecati nostrum. Minus perferendis quaerat atque dolorum adipisci inventore blanditiis quisquam, ratione itaque a? Ea laborum ipsam accusamus amet vitae expedita quibusdam porro. Officiis asperiores sapiente ab.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dolor at quis esse dicta fugit sunt consectetur iure cumque? Quos aspernatur tempora inventore obcaecati nostrum. Minus perferendis quaerat atque dolorum adipisci inventore blanditiis quisquam, ratione itaque a? Ea laborum ipsam accusamus amet vitae expedita quibusdam porro. Officiis asperiores sapiente ab.</p>
 
         </article>
     </main>
-    <script>
-        function clickMenu(){
-       
-        if (itens.style.display == 'block'){
-            itens.style.display ='none'
+    <script> 
 
-        }else{
-            itens.style.display = 'block'
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
+          }
+
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
         }
-        }
+
     </script>
 </body>
 </html>
